fix text align

--- a/src/components/experienceCard/ExperienceCard.scss
+++ b/src/components/experienceCard/ExperienceCard.scss
@@ -113,12 +113,13 @@
 }
 
 .experience-text-desc {
-  text-align: center;
+  text-align: justify;
 }
 
 .experience-text-details {
   padding: 1.5rem;
   margin-top: 2rem;
+  text-align: justify;
 }
 
 /* Media Query */
